fixed: error 화면 수정

--- a/front/views/error.html
+++ b/front/views/error.html
@@ -9,19 +9,21 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="errorWrap">
-            <div id="errorForm">
-                <div id="errorImg">
-                    <img
-                        src="/img/2697398bad5927125f3db2f8a248ca15effd194bae87d73dd00522794070855d.png"
-                        style="width: 25rem; height: 25rem"
-                    />
+        <div id="wrap">
+            <div id="errorWrap">
+                <div id="errorForm">
+                    <div id="errorImg">
+                        <img
+                            src="/img/2697398bad5927125f3db2f8a248ca15effd194bae87d73dd00522794070855d.png"
+                            style="width: 25rem; height: 25rem"
+                        />
+                    </div>
+                    <div id="errorComment">
+                        <h1>문제가 생겼어요..</h1>
+                        <p>다시 한번 확인해주세요</p>
+                    </div>
+                    <div id="errorBefore"><button>이전으로</button></div>
                 </div>
-                <div id="errorComment">
-                    <h1>문제가 생겼어요..</h1>
-                    <p>다시한번 확인해주세요</p>
-                </div>
-                <div id="errorBefore"><button>이전으로</button></div>
             </div>
         </div>
     </body>
