--- a/front/public/css/user/error.css
+++ b/front/public/css/user/error.css
@@ -1,22 +1,33 @@
+#wrap {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--joinFooter);
+}
+
 #errorWrap {
     width: 100%;
-    height: 100%;
 }
 
 #errorWrap > #errorForm {
-    display: flex;
-    width: 120rem;
+    background-color: var(--main);
+    margin: 0 auto;
+    width: 100rem;
     height: 82.4rem;
+    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin: 0 auto;
     box-sizing: border-box;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
 #errorWrap > #errorForm > #errorImg {
     display: flex;
     justify-content: center;
-    width: 120rem;
+    width: 100%;
     margin-bottom: 2.5rem;
 }
 
@@ -55,9 +66,9 @@
 #errorWrap > #errorForm > #errorBefore > button {
     width: 20rem;
     height: 4.6rem;
-    background: #adc46d;
+    background: var(--header);
     border: none;
-    color: #ffffff;
+    color: var(--main);
     font-weight: bold;
     font-size: 1.6rem;
 }
