--- a/front/public/css/user/error.css
+++ b/front/public/css/user/error.css
@@ -4,7 +4,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--joinFooter);
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 50%, rgb(110, 90, 60) 100%), url(../../img/error.jpg) 10% no-repeat;
+    background-size: cover;
 }
 
 #errorWrap {
