--- a/front/public/css/user/join.css
+++ b/front/public/css/user/join.css
@@ -34,6 +34,7 @@ form {
     flex-direction: column;
     justify-content: center;
     position: relative;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/joinForm.jpg) 10% no-repeat;
 }
 
 .agreeContent {
