--- a/front/public/css/user/join.css
+++ b/front/public/css/user/join.css
@@ -3,7 +3,9 @@ form {
 }
 
 #back {
-    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 20%, rgb(110, 90, 60) 90%), url(../../img/join.jpg) 10% no-repeat;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 50%, rgb(110, 90, 60) 100%), url(../../img/join.jpg) 10% no-repeat;
     background-size: cover;
 }
 
@@ -15,7 +17,7 @@ form {
     color: var(--main);
     display: block;
     text-align: center;
-    margin: 2rem auto 0;
+    margin: 0 auto;
     font-size: 7rem;
     font-family: var(--headerFont);
 }
