--- a/front/public/css/user/login.css
+++ b/front/public/css/user/login.css
@@ -1,99 +1,148 @@
-#loginWrap {
+body {
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 20%, rgb(110, 90, 60, 0.5) 100%), url(../../img/join.jpg) 10% no-repeat;
+    background-size: cover;
+}
+
+#wrap {
     width: 100%;
     height: 100%;
-    /* background: silver; */
-}
-
-#loginWrap > #loginForm {
     display: flex;
-    width: 120rem;
-    height: 82.4rem;
-    align-items: center;
-    margin: 0 auto;
-    padding: 5rem;
-    box-sizing: border-box;
-    /* background: magenta; */
-}
-
-#loginWrap > #loginForm > #loginLeft {
-    width: 60rem;
-    height: 70rem;
-    background-image: url('../../img/KakaoTalk_20230130_151918359.webp');
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-#loginWrap > #loginForm > #loginRight {
-    display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    width: 60rem;
-    height: 70rem;
-    background: #f5f5f5;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#loginRight > #loginRightSub > h1 {
-    font-size: 3.8rem;
+#joinLogo {
+    width: 50rem;
+    height: 10rem;
+    color: var(--main);
+    display: block;
     text-align: center;
-    color: #adc46d;
+    margin: 5rem auto;
+    font-size: 7rem;
+    font-family: var(--headerFont);
 }
 
-#loginRight > #loginInputForm > form > input {
-    display: block;
-    width: 28.9rem;
-    height: 4.6rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    /* border: none; */
+#loginForm {
+    margin: 0rem auto 5rem;
+    width: 70rem;
+    height: 60rem;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/joinForm.jpg) 10% no-repeat;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
-#loginRight > #loginInputForm > form > button {
-    display: block;
-    width: 28.9rem;
-    height: 4.6rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: none;
-    background: #adc46d;
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 1.6rem;
+#login {
+    margin: 0 auto;
+    width: 60%;
+    height: 100%;
 }
 
-#loginRight > #loginApi {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-#loginRight > #loginApi > p {
-    font-size: 2.4rem;
-}
-
-#loginRight > #loginApi > #loginApiImg {
-    display: flex;
-    width: 28.9rem;
-    justify-content: space-evenly;
-    margin-top: 2rem;
-}
-
-#loginRight > #loginApi > #loginApiImg > a > img {
-    width: 2.4rem;
-    height: 2.4rem;
-}
-
-#loginRight > #loginSignUp {
-    width: 28.9rem;
+#loginHeaderWrap {
+    width: 100%;
     height: 15rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#loginRight > #loginSignUp > a {
-    font-size: 2.4rem;
-    font-weight: bold;
-    color: #adc46d;
+#loginHeader {
+    width: 100%;
+    height: 10rem;
+    line-height: 10rem;
+    font-size: 6rem;
+    text-align: center;
+    font-family:var(--headerFont) ;
+}
+
+#loginContentWrap {
+    width: 100%;
+    height: 30rem;
+}
+
+#loginFooterWrap {
+    width: 100%;
+    height: 15rem;
+}
+
+#loginContents {
+    margin: 0 auto;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#loginBoxWrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#loginBoxWrap > input, button {
+    margin: 1rem 0;
+}
+
+#loginBoxWrap > input {
+    width: 28rem;
+    height: 4.5rem;
+    margin: 1rem 0;
+    padding: 1rem 2rem;
+    border: none;
+    background-color: #dedede;
+    border-radius: 0.3rem;
+    box-sizing: border-box;
+}
+
+#loginBoxWrap > button {
+    text-align: center;
+    line-height: 3rem;
+    width: 28rem;
+    height: 4.5rem;
+    margin: 2rem auto;
+    border: none;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: var(--main);
+    background-color: var(--header);
+}
+
+#loginApi > a {
+    display: inline-block;
+    margin: 0 1rem;
+}
+
+#loginApi > a > img {
+    width: 3rem;
+    height: 3rem;
+}
+
+#goToJoin {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#goToJoin > a {
+    text-align: center;
+    line-height: 3rem;
+    width: 28rem;
+    height: 4.5rem;
+    margin: 2rem auto;
+    border: none;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: var(--main);
+    background-color: var(--header);
 }
