--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="/css/layout/header.css">
     <link rel="stylesheet" href="/css/layout/footer.css">
     <link rel="stylesheet" href="/css/user/profile.css">
+    <script src="/js/layout/header.js" defer></script>
+    <script src="/js/layout/sidebar.js" defer></script>
 </head>
 <body>
-    {% include "layout/header.html" %}
+    <div id="wrap">
+        {% include "layout/header.html" %}
         <div id="profileWrap">
             <section id="profile">
                 <div class="profileInfo">
@@ -98,5 +101,6 @@
             </section>
         </div>
     {% include "layout/footer.html" %}
+    </div>
 </body>
 </html>
