--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/layout/header.css">
     <link rel="stylesheet" href="/css/layout/footer.css">
     <link rel="stylesheet" href="/css/user/profile.css">
-    <script src="/js/layout/header.js" defer></script>
-    <script src="/js/layout/sidebar.js" defer></script>
 </head>
 <body>
     <div id="wrap">
-        {% include "layout/header.html" %}
         <div id="profileWrap">
+            <a href="#" id="joinLogo">
+                TeamEzo
+            </a>
             <section id="profile">
                 <div class="profileInfo">
                     <div class="profileInfoLeft">
