--- a/front/public/css/user/profile.css
+++ b/front/public/css/user/profile.css
@@ -1,11 +1,28 @@
+#joinLogo {
+    width: 50rem;
+    height: 10rem;
+    color: var(--main);
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding: 5rem 0;
+    font-size: 7rem;
+    font-family: var(--headerFont);
+}
+
 #profileWrap {
+    padding-bottom: 10rem;
     width: 100%;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/profileback.jpg) 10% no-repeat;
+    background-size: cover;
 }
 
 #profile {
     margin: 0 auto;
     width: 120rem;
     height: 100rem;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/note.jpg) 10% no-repeat;
+    background-size: cover;
 }
 
 .profileInfo {
@@ -27,7 +44,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid var(--border);
+    background-color: var(--main);
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
 .profileInfoAvatar {
@@ -84,7 +103,9 @@
     display: flex;
     justify-content: center;
     /* align-items: center; */
-    border: 1px solid var(--border);
+    background-color: var(--main);
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
 .profileBox {
@@ -165,6 +186,7 @@
     height: 40%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .profileContentWrap {
@@ -174,8 +196,9 @@
     font-size: 2rem;
     border-bottom: 1px solid #ececec;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    background-color: var(--main);
 }
 
 .profileContentWrap:hover {
@@ -184,12 +207,27 @@
 }
 
 .profileContent {
+    width: 70%;
+    height: 100%;
     display: flex;
+    align-items: center;
     font-weight: 500;
+    padding-left: 4rem;
+    box-sizing: border-box;
 }
+
 
 .profileContent > div {
     margin: 0 1rem;
+}
+
+.profileRegister {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
 }
 
 .profileBtnWrap {
