--- a/front/public/css/user/welcome.css
+++ b/front/public/css/user/welcome.css
@@ -1,80 +1,127 @@
+#wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 70%, rgb(110, 90, 60, 0.5) 100%), url(../../img/welcomeback.jpg) 10% no-repeat;
+    background-size: cover;
+}
+
+#joinLogo {
+    width: 50rem;
+    height: 5rem;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding: 3rem 0;
+    font-size: 7rem;
+    font-family: var(--headerFont);
+    animation-name: fantasy;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes fantasy {
+    from {
+        color: var(--main);
+    }
+
+    to {
+        color: var(--footer);
+    }
+}
+
 #welcomeWrap {
     width: 100%;
     height: 100%;
 }
 
 #welcomeWrap > #welcomeForm {
-    display: flex;
-    width: 120rem;
+    margin: 10rem auto;
+    width: 100rem;
     height: 82.4rem;
-    flex-direction: column;
+    display: flex;
     justify-content: center;
-    margin: 0 auto;
+    align-items: center;
+    background: linear-gradient(180deg, rgba(75, 195, 54, 0.1) 100%, rgb(92, 184, 76) 100%), url(../../img/joinForm.jpg) 10% no-repeat;
+    box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    border-radius: 2rem;
     box-sizing: border-box;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeImg {
+.welcomeContentWrap {
+    width: 60rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#welcomeImg {
     display: flex;
     justify-content: center;
-    width: 120rem;
+    width: 100%;
     margin-bottom: 2.5rem;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeComment {
+#welcomeComment {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 1.5rem;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeComment > h1 {
+#welcomeComment > h1 {
     font-size: 5.4rem;
     font-weight: 500;
     margin-bottom: 1rem;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeComment > #welcomeLine {
+#welcomeComment > #welcomeLine {
     width: 13rem;
     border-bottom: 2px solid #000000;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeCele {
+#welcomeCele {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeCele > p {
+#welcomeCele > p {
     font-size: 2.6rem;
     font-weight: 345;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeProfile {
+#welcomeProfile {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
 }
 
-#welcomeWrap > #welcomeForm > #welcomeProfile > a {
-    font-size: 2.6rem;
-    font-weight: bold;
-}
-
-#welcomeWrap > #welcomeForm > #welcomeStart {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
-}
-
-#welcomeWrap > #welcomeForm > #welcomeStart > button {
-    width: 20rem;
-    height: 4.6rem;
-    background: #adc46d;
+#welcomeProfile > a {
+    text-align: center;
+    line-height: 3rem;
+    width: 28rem;
+    height: 4.5rem;
+    margin: 1rem auto;
     border: none;
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 1.6rem;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+    color: var(--main);
+    background-color: var(--header);
+    transition: all 0.3s;
+}
+
+#welcomeProfile > a:hover {
+    color: var(--main);
+    background-color: var(--footer);
 }
