--- a/front/views/user/welcome.html
+++ b/front/views/user/welcome.html
@@ -5,30 +5,38 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/layout/footer.css">
         <link rel="stylesheet" href="/css/user/welcome.css" />
         <title>Document</title>
     </head>
     <body>
-        <div id="welcomeWrap">
-            <div id="welcomeForm">
-                <div id="welcomeImg">
-                    <img src="/img/img.png" style="width: 25rem; height: 25rem" />
-                </div>
-                <div id="welcomeComment">
-                    <h1>환영합니다!</h1>
-                    <span id="welcomeLine"></span>
-                </div>
-                <div id="welcomeCele">
-                    <p>username 님, 회원가입을 축하합니다.</p>
-                    <p>새로운 아이디는 userid 입니다.</p>
-                </div>
-                <div id="welcomeProfile">
-                    <a href="#">프로필 설정하러 가기</a>
-                </div>
-                <div id="welcomeStart">
-                    <button>시작하기</button>
+        <div id="wrap">
+            <a href="#" id="joinLogo">
+                TeamEzo
+            </a>
+            <div id="welcomeWrap">
+                <div id="welcomeForm">
+                    <div class="welcomeContentWrap">
+                        <div id="welcomeImg">
+                            <img src="/img/img.png" style="width: 25rem; height: 25rem" />
+                        </div>
+                        <div id="welcomeComment">
+                            <h1>환영합니다!</h1>
+                            <span id="welcomeLine"></span>
+                        </div>
+                        <div id="welcomeCele">
+                            <p>username 님, 회원가입을 축하합니다.</p>
+                            <p>새로운 아이디는 userid 입니다.</p>
+                        </div>
+                        <div id="welcomeProfile">
+                            <a href="/user/profileEdit">프로필 설정하러 가기</a>
+                            <a href="/">시작하기</a>
+                        </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            {% include "layout/footer.html" %}
         </div>
     </body>
 </html>
